--- a/index.ipynb
+++ b/index.ipynb
@@ -39,7 +39,7 @@
     "#Your code here\n",
     "import requests\n",
     "url = 'https://api.yelp.com/v3/businesses/search'\n",
-    "api_key = ('y3WYgnbLiISycakTJ4pY8FE6IIg04naqC_C-8_IM1Diy0_r9Wxxz1dF-jF9SdKNxvE3V-Mjd9F_VdpajiuzfPXEoG9niixfbBX1_J1lc7E1pSzcAWA1KM_dFBCL5XHYx')\n",
+    "api_key = ('....')\n",
     "header = {'Authorization': 'Bearer {}'.format(api_key)}\n",
     "url_params = {'location': '11225', 'term': 'kosher', 'offset': 0}\n",
     "resp = requests.get(url, headers=header, params=url_params)"
@@ -658,7 +658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
